# cff2pages

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  pyproject.toml  requirements.txt
.github/workflows/: produce_pages.yml  publish.yml  python-package-test.yml
docs/: about.rst  api_references.rst  conf.py  index.rst  installation.rst  integration.rst  introduction.rst  quickstart.rst  release_checklist.rst  testing.rst  usage.rst
src/cff2pages/: cff2pages.py
src/cff2pages/resources/css/: cff2pages.css  default.css
src/cff2pages/templates/: authors.html  base.html  citation_macro.html  cite_as.html  identifiers.html  identifiers_macro.html  index.html  keyword_macro.html  keywords.html  reference_macro.html  references.html
src/cff2pages/templates/html/: authors_macro.html  base.html  citation_macro.html  reference_macro.html
src/cff2pages/templates/md/: authors_macro.md  base.md  citation_macro.md  identifiers_macro.md  keyword_macro.md  reference_macro.md
tests/: current.cff  diacritics.cff  minimal.cff  test_cff2pages.py
tests/expected/: expected_current.md  expected_current_body.html  expected_current_body_no_cb.html  expected_current_codemeta.md  expected_current_codemeta_body.html  expected_current_no_cb.md  expected_diacritics.md  expected_diacritics_body.html  expected_minimal.md  expected_minimal_body.html
tests/fixtures/: current.cff  current_codemeta.json
