[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cff2pages"
version = "0.2.0"
authors = [
    { name = "Jan Bernoth", email = "jan.bernoth@uni-potsdam.de" },
]
description = "This repository generates pages for GitHub or GitLab based on your CFF. This means that your CFF is well-suited for both machine processing and human readability."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'Jinja2>=3.1.2',
    'cffconvert>=2.0.0'
]

[project.urls]
"Homepage" = "https://github.com/University-of-Potsdam-MM/cff2pages"
"Bug Tracker" = "https://github.com/University-of-Potsdam-MM/cff2pages/issues"

[project.scripts]
cff2pages = "cff2pages.cff2pages:init_main"

[project.optional-dependencies]
test = [
    "flake8 ~= 6.1.0",
    "pytest ~= 7.4.0",
    "toml ~= 0.10.2",
    "beautifulsoup4 ~= 4.12.2"
]